solved overflow by using grid only on mobile body

--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -9,10 +9,8 @@
  * body
  */
 body {
-  /*
   display: grid;
   align-content: flex-start;
-  */
 
   font-family: $ff-base;
   font-weight: $fw-regular;
@@ -51,9 +49,8 @@ ul {
 @include media-breakpoint("tablet") {
   body {
     background-image: none;
-    /*
-    align-content: center;
-    place-items: center;
-    */
+
+    // mobile uses grid to solve margin overflow problems, reset for desktop
+    display: initial;
   }
 }
