--- a/src/stylesheets/components/_radio-card.scss
+++ b/src/stylesheets/components/_radio-card.scss
@@ -54,7 +54,7 @@
 .radio-card__label {
   display: grid;
   grid-template-columns: auto 1fr;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto;
   align-items: center;
   column-gap: 1rem;
   padding-inline: 1rem;
