--- a/src/stylesheets/themes/_light.scss
+++ b/src/stylesheets/themes/_light.scss
@@ -71,6 +71,8 @@
 
   --theme-plan-name: #{$clr-primary-800};
   --theme-plan-price: #{$clr-accent-purple};
+  --theme-plan-dark: #{$clr-primary-800};
+  --theme-plan-light: #{$clr-primary-300};
 }
 
 .theme--light {
